modified home page widgets, and added entry to crochet page

--- a/index.html
+++ b/index.html
@@ -103,21 +103,80 @@
 </section> -->
 <section id="projects" class="px-6 pb-16">
 <h2 class="font-extrabold mb-5 text-2xl text-midblue">Projects</h2>
-<section class="sm:grid sm:grid-type py-2  justify-normal items-stretch min-h-max flex flex-row flex-wrap gap-y-5 gap-x-4">
+<section class="py-2  justify-normal items-stretch min-h-max flex flex-row flex-wrap gap-y-5 gap-x-4">
+  
  <!-- <section class="py-2 justify-normal items-stretch min-h-max flex flex-row flex-wrap gap-y-5 gap-x-4">-->
   <a id="project_1" class="group card" href="https://studio-keys.onrender.com" target="_blank">
     <span class="card-title">Studio Keys</span>
     <span class="card-subtext">A Python-based tool designed to enable the easy retrieval and recovery 
       of UI/UX designs created with the (now) defunct Invision prototyping tool.</span>
+      <div class="flex flex-row my-4 gap-x-4">
+        <p class="techwidget">Python</p>
+        <p class="techwidget">Flask</p>
+        <p class="techwidget">GCS</p>
+        <p class="techwidget">Render</p>
+        <p class="techwidget">Tailwind</p>
+
+
+
+
+
+       </div>
   </a>
   <a id="project_2" class="group card" href="https://youtu.be/5HTkijZrJAc?si=a7blwTyL7nJWt4zG" target="_blank">
     <span class="card-title">CSXL Student Showcase Board</span>
     <span class="card-subtext">My team's final project for COMP 590 involved designing and 
       implementing a feature for the UNC CSXL website that allows students to showcase their projects and explore others' work in a 
       centralized, interactive feed. Click to watch our demo video!</span>
+      <div class="flex flex-row my-4 gap-x-4">
+        <p class="techwidget">Angular</p>
+        <p class="techwidget">FastAPI</p>
+        <p class="techwidget">SQLAlchemy</p>
+        <p class="techwidget">Kubernetes</p>
+       </div>
   </a>
+  <a id="project_2" class="group card" href="https://a05-pokedex-avikumar.vercel.app/" target="_blank">
+    <span class="card-title">Pokédex</span>
+    <span class="card-subtext">
+      a Pokédex app to display information about Pokemon, moves, and items. Built using Next.js and the Pokemon API, deployed live to the internet via Vercel. 
+    </span>
+   <div class="flex flex-row my-4 gap-x-4">
+    <p class="techwidget">Next.js</p>
+    <p class="techwidget">React Query</p>
+    <p class="techwidget">Tailwind</p>
+    <p class="techwidget">Vercel</p>
+
+
+   </div>
+  </a>
+  <a id="project_2" class="group card" href="https://a04-wordle-avikumar.vercel.app/" target="_blank">
+    <span class="card-title">Wordle</span>
+    <span class="card-subtext">A recreation of wordle using React.js. Exercise to become familiar with the framework.</span>
+    <div class="flex flex-row my-4 gap-x-4">
+      <p class="techwidget">React</p>
+     </div>
+  </a>
+  <a id="project_2" class="group card" href="https://a03-pixel-art-maker-nathanflinchum.vercel.app/" target="_blank">
+    <span class="card-title">Pixel Art Maker</span>
+    <span class="card-subtext">Create pixel art on a canvas that persists on page reload, with functionality to download paintings as pngs. exercise to practice using event listeners.</span>
+    <div class="flex flex-row my-4 gap-x-4">
+      <p class="techwidget">TypeScript</p>
+     </div>
+  </a>
+  <a id="project_2" class="group card" href="https://a02-calculator-avikumar.vercel.app/" target="_blank">
+    <span class="card-title">Fairly Odd Calculator</span>
+    <span class="card-subtext">A little exercise to practice using typescript, arrow and higher order functions, and my favorite colors.</span>
+    <div class="flex flex-row my-4 gap-x-4">
+      <p class="techwidget">TypeScript</p>
+     </div>
+  </a>
+ 
+  
+  
+
 </section>
-<div class="flex flex-row gap-x-4 min-h-max w-3/4 py-2 ">
+<!--
+<div class="flex flex-row gap-x-4 min-h-max  py-2 ">
   <a id="project_2" class="group flex flex-col w-full text-wrap p-4 border-viridian border-[1px] hover:border-red-300" href="https://a02-calculator-avikumar.vercel.app/" target="_blank">
     <span class="card-title">Fairly Odd Calculator</span>
     <span class="card-subtext">A little exercise to practice using typescript, arrow and higher order functions, and my favorite colors.</span>
@@ -130,7 +189,11 @@
     <span class="card-title">Wordle</span>
     <span class="card-subtext">A recreation of wordle using React.js. Exercise to become familiar with the framework.</span>
   </a>
-</div>
+  <a id="project_2" class="group flex flex-col w-full p-4 border-viridian border-[1px] hover:border-red-300" href="https://a04-wordle-avikumar.vercel.app/" target="_blank">
+    <span class="card-title">Pokédex</span>
+    <span class="card-subtext">A recreation of wordle using React.js. Exercise to become familiar with the framework.</span>
+  </a>
+</div>-->
 
 </section>
 
