made responsive and added a poem

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </p>
     </div>
     <div class="text-center container mx-auto mt-6 text-sm text-viridian">
-      <ul class="flex flex-wrap justify-center gap-1 gap-y-4 sm:gap-3 px-1 sm:p-0">
+      <ul class="flex flex-wrap justify-center gap-1 gap-y-4 sm:gap-3 px-1 sm:p-0  ">
         <li>
           <a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 sm:p-2 px-1 py-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" 
              href="https://www.linkedin.com/in/jahnavikumar/" 
@@ -103,10 +103,10 @@
 </section> -->
 <section id="projects" class="px-6 pb-16">
 <h2 class="font-extrabold mb-5 text-2xl text-midblue">Projects</h2>
-<section class="py-2  justify-normal items-stretch min-h-max flex flex-row flex-wrap gap-y-5 gap-x-4">
+<section class="py-2  justify-normal items-stretch min-h-max flex flex-row flex-wrap gap-y-5 gap-x-4 max-sm:flex-col max-sm:gap-y-4 ">
   
  <!-- <section class="py-2 justify-normal items-stretch min-h-max flex flex-row flex-wrap gap-y-5 gap-x-4">-->
-  <a id="project_1" class="group card" href="https://studio-keys.onrender.com" target="_blank">
+  <a id="project_1" class="group card  " href="https://studio-keys.onrender.com" target="_blank">
     <span class="card-title">Studio Keys</span>
     <span class="card-subtext">A Python-based tool designed to enable the easy retrieval and recovery 
       of UI/UX designs created with the (now) defunct Invision prototyping tool.</span>
@@ -116,11 +116,6 @@
         <p class="techwidget">GCS</p>
         <p class="techwidget">Render</p>
         <p class="techwidget">Tailwind</p>
-
-
-
-
-
        </div>
   </a>
   <a id="project_2" class="group card" href="https://youtu.be/5HTkijZrJAc?si=a7blwTyL7nJWt4zG" target="_blank">
