--- a/pages/blog.html
+++ b/pages/blog.html
@@ -45,7 +45,7 @@
   </a>
 </div>
 
-<div class="bg-viridian bg-opacity-30 mx-32">
+<div class="bg-viridian bg-opacity-30 mx-32 max-sm:mx-6">
 <div name="thumbnail" class="max-w-5xl mx-auto pb-8 pt-6 px-6  text-center">
   <a href="./entries.html">
     <h1 class="text-lighterblue text-xl font-bold px-2 py-1 mb-2 hover:bg-blue-200 hover:bg-opacity-70 border-2 border-lighterblue hover:border-lighterblue  hover:text-lighterblue  transition-all duration-75 max-w-fit text-center mx-auto">All Posts</h1>
